--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-native": "^0.74.4",
+    "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.8",
@@ -44,4 +45,5 @@
   "engines": {
     "node": ">=18"
   }
+
 }
